upd: samples project